tests with cookies

--- a/src/main/webapp/server.html
+++ b/src/main/webapp/server.html
@@ -2,8 +2,15 @@
 <html>
 <head>
    <title>Server</title>
+   <script type="text/javascript">
+   
+   function getCookie () {
+      return document.cookie;
+   }
+
+   </script>
 </head>
-<body>
+<body onload="javascript:getCookie();">
    Hello!
 </body>
 </html>
